# my_b

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeLists.txt.bak  CMakePresets.json  Dockerfile  Makefile  README.md  build.sh  codecov.yml  compile_commands.json  cov.sh  imgui.ini  test_keys.cpp  vcpkg.json
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/workflows/: test.yml
.zed/: debug.json  tasks.json
assets/: index.html
cmake/: patch_imgui_sfml.cmake
docs/: Untitled Diagram.drawio  system-arch.drawio
include/: http_client.h  logger.h  logging.h  url.h  utils.h
src/: CMakeLists.txt  common.cpp  common.hpp  const.hpp  file.cpp  http_client.cpp  logger.h  logger.hpp  main.cpp  test.c  url.cpp  utils.cpp  utils.h  utils.hpp
src/browser/: Browser.cpp  Browser.hpp
src/common/: common.cpp
src/file/: File.cpp  File.h  File.hpp
src/http/: HttpClient.cpp  HttpClient.h  HttpClient.hpp  HttpRequest.cpp  HttpRequest.hpp  IHttpClient.h  IHttpClient.hpp  Types.h  Types.hpp
src/layout/: layout.cpp  layout.hpp
src/lib/: CMakeLists.txt  logger.hpp
src/lib/browser/: Browser.cpp  Browser.hpp
src/lib/common/: common.cpp  common.hpp
src/lib/file/: File.cpp  File.hpp
src/lib/http/: HttpClient.cpp  HttpClient.hpp  HttpRequest.cpp
src/lib/layout/: layout.hpp
src/lib/resource-loader/: ResourceLoader.cpp  ResourceLoader.hpp
src/lib/resource-manager/: ResourceManager.cpp  ResourceManager.h
src/lib/url/: Url.cpp
src/lib/utils/: utils.cpp  utils.hpp
src/resource-manager/: ResourceManager.cpp  ResourceManager.h
src/texture-manager/: TextureManager.cpp  TextureManager.h
src/ui/: Button.cpp  Button.hpp  CMakeLists.txt  Element.hpp  RoundedRectangle.cpp  RoundedRectangle.hpp  Scrollbar.cpp  Scrollbar.hpp  UiElement.hpp  UiManager.cpp  UiManager.hpp
src/url/: IUrl.h  IUrl.hpp  Types.h  Types.hpp  Url.cpp  Url.h  Url.hpp
tests/: CMakeLists.txt  test_common.cpp  test_file.cpp  test_helpers.h  test_helpers.hpp  test_http_client.cpp  test_http_request.cpp  test_ui_manager.cpp  test_url.cpp  test_utilites.cpp
tests/mock_data/: file_2_html.html  short-file.txt  simple-html.html
